--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -1,4 +1,13 @@
+
+@font-face {
+  font-family: 'Raleway';
+  src: url(/src/assets/fonts/Raleway-SemiBold.ttf);
+  font-weight: 500;
+  font-style: normal;
+}
 body {
+  font-family: 'Raleway';
+  font-weight: bold;
   display: flex;
   flex-direction: column;
   background-color: green;
