--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,4 +2,11 @@
 @import './abstracts/breakpoints';
 @import './abstracts/functions';
 @import './abstracts/mixins';
+
 @import './base/reset';
+@import './base/typography';
+
+@import 'layout/navigation';
+@import 'layout/grid';
+@import 'layout/header';
+@import 'layout/footer';
