--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,6 +4,7 @@
 @import './abstracts/breakpoints';
 @import './abstracts/functions';
 @import './abstracts/mixins';
+@import './abstracts/utilitieFunctions';
 
 @import './base/reset';
 @import './base/typography';
